--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.main-container-height {
+    height: calc(100vh - 96px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.color-primary {
+    color: #177DBA !important;
+}
+
+.bg-color-primary {
+  background-color: #177DBA !important;
+}
+
+/* Width of the scrollbar */
+::-webkit-scrollbar {
+    width: 10px; /* You can adjust the width as needed */
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  
+  /* Track (the area behind the scrollbar) */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Change the background color */
+    border-radius: 5px; /* Add border radius */
   }
-}
+  
+  /* Handle (the draggable part of the scrollbar) */
+  ::-webkit-scrollbar-thumb {
+    background: #888; /* Change the color of the scrollbar handle */
+    border-radius: 5px; /* Add border radius */
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Change the color of the scrollbar handle on hover */
+  }
+  
